--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,7 @@
         <meta name="theme-color" content="#000000"/><meta name="Play-to-earn game" content="Blockgangsters.io"/>
         <link rel="apple-touch-icon" href="/logo192.png"/><link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"/>
         <link rel="manifest" href="/manifest.json"/>
-        <title>Blockgangsters.io
-
-        </title>
+        <title>Blockgangsters</title>
         <link href="/static/css/2.5764c7cc.chunk.css" rel="stylesheet">
         </head>
         <noscript>You need to enable JavaScript to run this app.</noscript>
